--- a/scanDirectoryTest2/scanDirectoryTest2/scanDirectoryTest2.csproj
+++ b/scanDirectoryTest2/scanDirectoryTest2/scanDirectoryTest2.csproj
@@ -59,6 +59,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MetadataContainer.cs" />
     <Compile Include="ScanDir.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanPluginProperties.cs" />
